# carbonio-bayes-trainer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.2.2.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: README.md  productive-scan.md  scan-example.txt
src/carbonio_bayes_trainer/: __init__.py  backend.py  carbonio_backend.py  cli.py  config.py  database.py  processor.py  spamassassin.py  state_engine.py  trainer.py
systemd/: carbonio-bayes-trainer.service  carbonio-bayes-trainer.timer
tests/: test_carbonio_backend.py  test_carbonio_limit.py  test_cli_parallel.py  test_config.py  test_database.py  test_processor.py  test_scan_cli.py  test_spamassassin.py  test_state_engine.py
